--- a/src/Pages/Alumni/Styles/Style.module.css
+++ b/src/Pages/Alumni/Styles/Style.module.css
@@ -12,10 +12,10 @@
 }
 
 .container {
-  width: 97.5%;
+  width: 100%;
   height: 100%;
+  padding-right: 1%;
   display: flex;
-  flex-direction: row;
   background-color: #0d1213;
   padding-top: 4%;
   color: white;
@@ -25,10 +25,7 @@
 
 .mainContainer {
   display: flex;
-  /* height: 500px; */
-  /* align-items: center; */
-  /* justify-content: space-around; */
-  /* overflow: hidden; */
+  /* flex-wrap: wrap; */
 }
 
 .firstContainer { 
@@ -102,8 +99,6 @@
 }
 
 .thirdContainer {
-  display: flex;
-  flex-direction: column;
   margin-top: 5%;
 }
 
