--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -68,30 +68,17 @@ nav{
     width: 6vh;
   }
 
-  /* .nav-btn{
-    background: transparent;
-    padding: 5px;
-    cursor: pointer;
-    color: white;
-    border: none;
-    outline: none;
-    visibility: hidden;
-    opacity: 0;
-  } */
-
-  /* @media (max-width: 1200px) {
-    .right-nav{
-        visibility: hidden;
-        opacity: 0;
-        display: none;
-    }
-  } */
-  /* } */
   .hamburger{
     display: none;
   }
 
-@media screen and (max-width:1200px){
+@media screen and (max-width:768px){
+  nav{
+    background-color: transparent;
+    filter: none;
+    backdrop-filter: none;
+  }
+
   .right-nav{
       visibility: hidden;
       opacity: 0;
@@ -104,6 +91,9 @@ nav{
   }
   .hamburger{
     display: flex;
+    background: rgba(0, 0, 0, 0.60);
+    cursor: pointer;
+    border-radius: 12px;
     justify-content: center;
     align-items: center;
     margin: 0 30px;
@@ -123,7 +113,7 @@ nav{
       width: 40px;
       height: 40px;
       text-align: center;
-      margin-right: 1rem;
+      padding: 1rem 0.5rem;
     }
     .side-nav{
       height: 100vh;
