--- a/src/Pages/Alumni/Styles/Style.module.css
+++ b/src/Pages/Alumni/Styles/Style.module.css
@@ -28,34 +28,34 @@
   /* flex-wrap: wrap; */
 }
 
-.firstContainer { 
-  height: 100%; 
+.firstContainer {
+  height: 100%;
   margin-left: 10%;
   margin-right: 14%;
 }
 
-.im1{
+.im1 {
   display: flex;
 }
 
-.Dots{
+.Dots {
   position: relative;
   left: -40px;
   bottom: -52px;
 }
 
-.Cross{
+.Cross {
   padding-inline: 5%;
 }
 
-.Arrow{
+.Arrow {
   padding-inline-start: 25%;
 }
 
 .secondContainer {
   margin-left: 20px;
   margin-top: 20px;
-  margin-right : 20px;
+  margin-right: 20px;
   padding: 0;
   font-size: 25px;
   width: 40%;
@@ -65,36 +65,37 @@
   flex-wrap: wrap;
 }
 
-.Lines2{
+.Lines2 {
   position: relative;
-  top: -300px;
+  top: -50px;
   transform: rotate(90deg);
-  left: 430px;
+  left: 250px;
 }
-.Broadline{
+.Broadline {
   position: relative;
-  top: 47px;
+  top: 10px;
   left: -350px;
 }
 
-.Alumni{
+.Alumni {
   position: relative;
-  top: 50px;
+  /* top: 50px; */
   right: 50px;
-  font-family: 'Inter';
-  font-weight: 700; 
+  font-family: "Poppins";
+  font-weight: 700;
   font-size: 55px;
-  line-height: 139px; 
+  line-height: 139px;
 }
-.Squarcle{
+.Squarcle {
   position: relative;
-  top: 270px;
+  top: 0px;
+  left: 250px;
 }
 
-.p{
+.p {
   position: relative;
   top: 40px;
-  width: 350px;
+  width: 450px;
   right: 50px;
 }
 
