--- a/src/Pages/Events/styles/event1/eventCard.module.css
+++ b/src/Pages/Events/styles/event1/eventCard.module.css
@@ -8,6 +8,7 @@
     flex-direction: column;
     flex-grow: 2;
     align-items: center;
+    border-radius: 8px;
 }
 
 .cardContainerTilt{
@@ -36,6 +37,7 @@
     background-color: wheat;
     width: inherit;
     height: 85%;
+    border-radius: 8px;
 }
 .title{
     display: flex;
