--- a/src/Pages/Sponsors/styles/home.module.css
+++ b/src/Pages/Sponsors/styles/home.module.css
@@ -83,6 +83,12 @@
     z-index: 4;
 }
 
+.circle-logo{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .circle{
   position: fixed;
   display: block;
@@ -237,9 +243,9 @@ input[type="text"], textarea {
     border-radius: 1rem;
     background-color : #000000; 
     height: 3rem;
-    width: 50%;
-    padding: 1vw;
-    font-size: 3vh;
+    width: 30%;
+    padding: 0.5vh 1vw;
+    font-size: 175%;
 }
 input[type="email"], textarea {
     border-color: rgb(0, 187, 255);
@@ -247,8 +253,8 @@ input[type="email"], textarea {
     background-color : #000000; 
     height: 3rem;
     width: 50%;
-    padding: 1vw;
-    font-size: 3vh;
+    padding: 0.5vh 1vw;
+    font-size: 175%;
 }
 
 textarea{
