--- a/src/Pages/Sponsors/styles/home.module.css
+++ b/src/Pages/Sponsors/styles/home.module.css
@@ -1,7 +1,6 @@
 .main{
     padding-left: 5rem;
     background-color: black;
-    height: 450vh;
     /* width: fit-content; */
     padding-right: 5rem;
     max-width: 100%;
@@ -47,7 +46,7 @@
     padding-top: 5rem;
     /* padding-bottom: 5rem; */
     color: white;
-    font-size: 400%;
+    font-size: 6rem;
 }
 
 .sponsorUsHead{
@@ -76,7 +75,7 @@
 
 .spnsrlogo1{
     /* padding-left: 2vw; */
-    height: 30vh;
+    height: 10rem;
     /* position: fixed; */
     /* left: 10vw; */
     /* top: 20vh; */
@@ -120,7 +119,7 @@
 
 .containerSpace{
     order: 2;
-    flex-basis: 25%;
+    flex-basis: 10%;
 }
 
 .container2{
@@ -143,22 +142,32 @@
 .subheading{
     font-size: 400%;
     color:white;
-
 }
 
-p{
+
+.listStyle{
+  text-decoration-color: white;
+}
+
+li{
   color:white;
 }
 
 .sponsorText{
     color:white;
     display:inline-block;
+    font-weight: bold;
+}
+
+p{
+  color: white;
 }
 
 .sponsorPara{
     color: white;
     display:inline-block;
     font-size: 130%;
+    padding: 1rem;
 }
 
 .carousel2{
@@ -186,6 +195,16 @@ p{
     align-content: space-around; */
     display:grid;
     grid-template-columns:repeat(3,1fr);
+}
+
+.sponsorForm{
+  padding: 2.5rem;
+  /* background-color: #ffffff23; */
+  margin-bottom: 6rem;
+  border-radius: 36px;
+  /* backdrop-filter: blur(1000px); */
+  background-color: rgba(255, 255, 255, 0.1); 
+  backdrop-filter: blur(5px);
 }
 
 .box1{
