--- a/src/Pages/AboutUs/styles/aboutus.module.css
+++ b/src/Pages/AboutUs/styles/aboutus.module.css
@@ -6,6 +6,14 @@ body{
   /* overflow-y: hidden; */
 }
 
+.About{
+  animation: fadeIn 1s;
+}
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
 .teamimage{
   width: 100%;
   margin: 0;
