--- a/src/Pages/Sponsors/styles/home.module.css
+++ b/src/Pages/Sponsors/styles/home.module.css
@@ -18,18 +18,15 @@
 /* swiper js part */
 .mySwiper{
   width: 88vw;
-  height: 40vw;
+  height: 30rem;
   background: linear-gradient(180deg, rgba(217, 65, 100, 0.91) 3.23%, rgba(250, 57, 102, 0) 100%);
   border-radius: 30px;
-
   /* following are the properties for flex box */
-
   display: flex;
   flex-direction: row;
   /* flex-wrap: nowrap; */
   justify-content: center;
   align-items: center;
-
 }
 /* .swiper-button-prev {
   opacity:0;
@@ -71,16 +68,17 @@
     flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
+    padding-top: 4rem;
 }
 
 .spnsrlogo1{
     /* padding-left: 2vw; */
-    height: 10rem;
+    height: 12rem;
     /* position: fixed; */
     /* left: 10vw; */
     /* top: 20vh; */
     z-index: 4;
-    margin-left: 4rem;
+    margin-left: 3rem;
     width: max-content;
 }
 
@@ -107,8 +105,10 @@
 .container1{
     order:1;
     position:relative;
-    flex-basis: 33%;
+    flex-basis: 30%;
     max-width: fit-content;
+    justify-content: flex-start;
+    align-items: center;
     /* background-image: url(../assets/circle.png); */
      /* justify-content: center; */
     /* background-position: center; */
@@ -117,16 +117,15 @@
     /* align-items: center; */ 
 }
 
-.containerSpace{
-    order: 2;
-    flex-basis: 10%;
-}
 
 .container2{
     order: 3;
-    flex-basis:33%;
-    padding-right: 5vw;
-    padding-bottom: 4vh;
+    flex-basis:55%;
+    /* padding-right: 5vw; */
+    /* padding-bottom: 4vh; */
+    justify-content: center;
+    align-items: center;
+    margin-left: 4rem;
     /* justify-content: center;
     align-items: center; */
 }
@@ -314,6 +313,11 @@ input[type="submit"]{
   margin-left: 5vw;
 }
 
+.sponsorHead{
+  font-size: 400%;
+  font-weight: bold;
+  color: white;
+}
 
 /* 
   -------
@@ -322,20 +326,6 @@ input[type="submit"]{
   Responsiveness 
   --------
 */
-
-@media screen and (max-width: 1472px) {
-  .spnsrlogo1{
-    top:18vh;
-    height:21vw;
-  }
-  .container1{
-    padding-right: 10vw;
-  }
-  .carousel2 img{
-    height: 100vh;
-  }
-}
-
 
 /* @media screen and (max-width: 1328px) {
 .spnsrlogo1{
@@ -391,19 +381,6 @@ input[type="submit"]{
   input[type="text"], input[type="email"] {
     width: 80vw;
   }
-  .spnsrlogo1{
-    top:11vh;
-    left:10.69vw;
-    height:19vw;
-  }
-  .circle{
-    top:3vh;
-    left:4vw;
-    height:34vw;
-  }
-  .container2{
-    padding-bottom: 10vh;
-  }
 }
 
 /* @media screen and (max-width: 762px) {
@@ -434,17 +411,7 @@ input[type="submit"]{
     margin-right: 7vw;
   }
   .spnsrlogo1{
-    top:11vh;
-    left:16vw;
-    height:17vw;
-  }
-  .circle{
-    top:3.5vh;
-    left:8.69vw;
-    height:33vw;
-  }
-  .carousel2 img{
-    height: 9vh;
+    height:8rem;
   }
   .spnsorformsubmit{
     padding-left: 0vw;
@@ -458,28 +425,6 @@ input[type="submit"]{
 }
 
 
-/* @media screen and (max-width: 609px) {
-  .spnsrlogo1{
-    padding-left: 8vw;
-    height: 12vh;
-    padding-bottom: 2vh;
-  }
-  .carousel2 img{
-    height: 8vh;
-  }
-} */
-
-
-/* @media screen and (max-width: 583px) {
-  .heading{
-    font-size: 300%;
-  }
-  
-  .subheading{
-    font-size: 300%;
-    text-align: center;
-  }
-} */
 
 @media screen and (max-width: 576px) {
   .main{
@@ -494,14 +439,9 @@ input[type="submit"]{
   .sponsorUsHead{
     font-size: 200%;
   }
-  .carousel2{
-    padding-left: 3vw;
-  }
-  .carousel2 img{
-    height: 10vh;
-  }
   .sponsorPara{
-    padding-left: 4vw;
+    /* padding-left: 0.3rem; */
+    justify-self: flex-end;
     font-size: 110%;
   }
 }
@@ -520,12 +460,22 @@ input[type="submit"]{
     font-size: 200%;
   }
   .spnsrlogo1{
-    left:16vw;
-    height:14vw;
+    height:5rem;
   }
   .container1{
     height: 10rem;
-    margin-right: 3vw;
+  }
+  .container2{
+    margin-top: 2rem;
+    margin-left: 1rem;
+    justify-content: center;
+    text-align: center;
+  }
+  .sponsorHead{
+    font-size: 40px;
+  }
+  .sponsorText{
+    text-align: center;
   }
   .carousel2{ 
     width: 70vw;
@@ -539,7 +489,7 @@ input[type="submit"]{
     flex-direction: column;
   }
   .mySwiper{
-    flex-direction: column;
+    height: 60vh;
   }
   .carousel2 img{
     /* margin-top: -90%; */
@@ -557,12 +507,14 @@ input[type="submit"]{
   .sponsorUsHead{
     font-size: 160%;
   }
+  .carousel1{
+    flex-direction: column;
+  }
   .carousel2 img{
     height: 8vh;
   }
   .sponsorPara{
-    padding-left: 4vw;
-    font-size: 90%;
+    font-size: 95%;
   }
 }
 
@@ -601,7 +553,8 @@ input[type="submit"]{
     width: 80vw;
   }
   .carousel1{
-    margin-right: 50vw;
+    /* margin-right: 50vw; */
+    flex-direction: column;
   }
   .carousel2{
     margin-left: 3vw;
