--- a/src/Pages/OurTeam/Style/ourteam.module.css
+++ b/src/Pages/OurTeam/Style/ourteam.module.css
@@ -1,5 +1,6 @@
 .ourteam {
   width: 100%;
+  margin-top: 5rem;
   min-height: 100vh;
   background-color: #0d1213;
   margin: 0px;
@@ -37,9 +38,10 @@
 .navbar {
   display: flex;
   /* justify-content: center; */
-  
+  margin-top: 3rem; 
   /* text-decoration: none; */
   list-style-type: none;
+  z-index: 13;
   margin-left: 23%;
   /* flex-wrap: wrap; */
   /* position: absolute; */
@@ -58,6 +60,9 @@
   padding-top: 10%;
   margin-right: 5%;
   z-index: 1;
+}
+.navbar li :hover{
+  color: rgb(192, 182, 182);
 }
 .navbar a {
   text-decoration: none;
